welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: '=' expected but ')' found.
def marquer() )
              ^Array1:22: error: illegal start of simple expression
}
^