welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
def marquer() )
{
baisseBrosse();
leveBrosse();
}

var hauteur=getMondeHauteur();
var T = new Array[Color](hauteur);
for (i<-1 to hauteur)
{
	T(i)=getCouleurSol();
	avance();
}
avance();
gauche();
avance();
droite();
marquer();

}
